k8s-dasboards/kiali_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
  name: kiali-ingress
  namespace: istio-system
spec:
  ingressClassName: nginx
  rules:
  - host: kiali.rezz.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kiali
            port:
              number: 20001
